fix #26 - overflowing links in chat

--- a/src/server/public/css/main.css
+++ b/src/server/public/css/main.css
@@ -865,7 +865,6 @@ h1 {
     border: 8px solid white;
     border-right-color: transparent;
     border-top-color: transparent;
-    /*box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);*/
 }
 
 .messages {
@@ -873,13 +872,14 @@ h1 {
     padding: 10px;
     border-radius: 2px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-
     cursor: default;
 }
 
 .messages p {
     font-size: 12px;
     margin: 0 0 0.2rem 0;
+    text-overflow: ellipsis;
+    overflow:hidden;
 }
 
 .messages time {
